--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,18 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.0
+  intl: ^0.17.0
+  path_provider: ^2.0.8
+  sqflite: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  mocktail: ^0.2.0
+  sqflite_common_ffi: ^2.1.0
 
 flutter:
   uses-material-design: true
-
