--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "name": "food_diary",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "./lib/main.dart"
         },
         {
             "name": "Dart: Run all Tests",
