--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  get_it: ^7.2.0
   intl: ^0.17.0
   path_provider: ^2.0.8
   sqflite: ^2.0.1
 
 dev_dependencies:
+  bloc_test: ^9.0.2
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
   mocktail: ^0.2.0
   sqflite_common_ffi: ^2.1.0
-  bloc_test: ^9.0.2
 
 flutter:
   uses-material-design: true
