--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 
 dev_dependencies:
   bloc_test: ^9.0.2
+  faker: ^2.0.0
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
