--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  flutter_localizations: 
+    sdk: flutter
+    version: ^0.0.0
   get_it: ^7.2.0
   intl: ^0.17.0
   path_provider: ^2.0.8
