--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
 dev_dependencies:
   bloc_test: ^9.0.2
   faker: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
@@ -32,6 +33,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+flutter_icons:
+  image_path: "assets/img/icon.png"
+  android: true
 flutter_intl:
   enabled: true
   class_name: "AppLocalization"
