--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,9 +7,9 @@ name: Dart
 
 on:
   push:
-    branches: [ development ]
+    branches: [ main ]
   pull_request:
-    branches: [ development ]
+    branches: [ main ]
     
   workflow_dispatch:
 
